# async-io-mini

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish-dry-run.yml  publish.yml
src/: io.rs  lib.rs  nal.rs  reactor.rs  sys.rs  timer.rs
tests/: async.rs  timer.rs
