[package]
name = "async-io-mini"
version = "0.1.0"
authors = ["Stjepan Glavina <stjepang@gmail.com>", "Ivan Markov"]
edition = "2021"
rust-version = "1.77"
description = "Async I/O fork for embedded systems"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ivmarkov/async-io-mini"
keywords = ["select", "ESP IDF"]
categories = ["asynchronous", "network-programming", "MCU", "embedded"]
exclude = ["/.*"]

[patch.crates-io]
edge-nal = { git = "https://github.com/ivmarkov/edge-net" }

[features]
default = ["futures-io", "futures-lite"]
edge-nal = ["embedded-io-async", "dep:edge-nal", "futures-io", "futures-lite/std"]

[dependencies]
libc = "0.2"
enumset = "1"
heapless = "0.8"
log = { version = "0.4", default-features = false }
futures-io = { version = "0.3", default-features = false, optional = true, features = ["std"] }
futures-lite = { version = "1", default-features = false, optional = true }
edge-nal = { version = "0.2", default-features = false, optional = true }
embedded-io-async = { version = "0.6", optional = true, features = ["std"] }

[dev-dependencies]
futures-io = "0.3"
futures-lite = "1"
embassy-time = { version = "0.3", features = ["std", "generic-queue"] }
async-channel = "2"
env_logger = "0.10"

[[test]]
name = "async"
required-features = ["futures-io", "futures-lite"]
