[package]
name = "async-io-mini"
version = "0.3.0"
authors = ["Stjepan Glavina <stjepang@gmail.com>", "Ivan Markov"]
edition = "2021"
rust-version = "1.83"
description = "Async I/O fork for embedded systems"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ivmarkov/async-io-mini"
keywords = ["select", "ESP-IDF"]
categories = ["asynchronous", "network-programming", "embedded"]
exclude = ["/.*"]

[features]
default = ["futures-io", "futures-lite", "embassy-time"]
embassy-time = ["embassy-time-driver", "dep:embassy-time"]

[dependencies]
libc = "0.2"
enumset = "1"
heapless = "0.8"
log = { version = "0.4", default-features = false }
futures-io = { version = "0.3", default-features = false, optional = true, features = ["std"] }
futures-lite = { version = "2", default-features = false, optional = true }
embassy-time-driver = { version = "0.2", optional = true }
embassy-time = { version = "0.4", optional = true }

[dev-dependencies]
futures-io = "0.3"
futures-lite = "2"
embassy-time = { version = "0.4", features = ["std"] }
embassy-time-queue-utils = { version = "0.1", features = ["generic-queue-64"] }
async-channel = "2"
env_logger = "0.10"

[[test]]
name = "async"
required-features = ["futures-io", "futures-lite", "embassy-time"]

[[test]]
name = "timer"
required-features = ["futures-lite", "embassy-time"]
